--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,17 @@ jobs:
     services:
       mydb:
         image: mysql:5.7
+        ports: 
+            - 3000:3306
         env:
           MYSQL_ROOT_PASSWORD: password
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
     steps:
     - name: Verify MySQL connection from container 
       run: |
-        apt-get update
-        apt-get install -y mysql-client
-        mysql --host mydb -uroot -ppassword -e "SHOW DATABASES"
+         apt-get update
+         apt-get install -y mysql-client 
+         mysql --host mydb -uroot -ppassword -e "SHOW DATABASES"
 
+    - name: Try connecting another way 
+      run: mysql 0.0.0.0 -uroot -ppassword -P 3000 -e "SHOW DATABASES"
